Avoid sending requests to example.com